refactor: Apply SOLID principles and optimize codebase - Apply Single Responsibility Principle (SRP) to all classes - Implement Open-Closed Principle (OCP) with OAuth2 Provider Strategy Pattern - Add Dependency Inversion Principle (DIP) by depending on interfaces - Move BaseEntity to common package for better organization - Add validation logic to domain entities (Posts, User) - Implement OAuth2Provider interface with Google and Naver providers - Add OAuth2ProviderFactory for extensible OAuth provider management - Enhance exception handling with IllegalArgumentException and validation - Add comprehensive JavaDoc documentation - Improve logging with structured log messages - Change GUEST role to ADMIN, OAuth users get USER role - Fix ProfileControllerTest to use unit test approach - Add @NoArgsConstructor(access = AccessLevel.PROTECTED) for immutability